src/objects/Custom_Apex_Error_Handler__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Email__c</fullName>
        <description>You can send emails to the current user by specifying the Name of the Custom Setting to start with &quot;CurrentUser&quot; (no quotes). Example: CurrentUser_ForSuchAndSuch.</description>
        <inlineHelpText>You can send emails to the current user by specifying the Name of the Custom Setting to start with &quot;CurrentUser&quot; (no quotes). Example: CurrentUser_ForSuchAndSuch.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Single_Apex_Class__c</fullName>
        <inlineHelpText>List the name of a single apex class from which you want to get emails upon errors - if and only if the apex class was coded to leverage these settings. If left blank, person will get every email possible.</inlineHelpText>
        <label>Single Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Exception__c</fullName>
        <label>Single Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Apex Error Handler</label>
</CustomObject>